--- a/index.html
+++ b/index.html
@@ -490,22 +490,20 @@
     </section>
   </main>
 
-  <script>
+  <script type="module">
+    import {
+      DEFAULT_SOLVER,
+      simulate as coreSimulate,
+      simulateWithState as coreSimulateWithState
+    } from "./src/simulator-core.mjs";
+
     (() => {
-      const EPS0 = 8.8541878128e-12;
       const REF = {
         centeredCapPF: 48.2,
         slopeVPerMm: 1.25,
         poleHz: 306,
       };
-      const SOLVER = {
-        tolV: 1e-9,
-        maxIter: 2000,
-        transferGain: 1.0,
-        useOutputClamp: true,
-        clampMinV: -12,
-        clampMaxV: 12,
-      };
+      const SOLVER = { ...DEFAULT_SOLVER };
 
       /** @typedef {{
        * widthCm:number,heightCm:number,totalGapMm:number,position:number,freqHz:number,
@@ -624,157 +622,14 @@
         return { inputs, sweep };
       }
 
-      function cycleStep(state, derived) {
-        const {
-          c3F, c4F, cSensorEqF, qPacketOpenC, alpha, transferGain,
-          useClamp, clampMinV, clampMaxV
-        } = derived;
-
-        // Phase A: sensor-induced packet into C3 with back-reaction term.
-        const qSensorC = qPacketOpenC - cSensorEqF * state.v3;
-        const v3A = state.v3 + qSensorC / c3F;
-        const v4A = state.v4;
-
-        // Phase B: charge sharing between C3 and C4. Bidirectional by sign of (V3 - V4).
-        const cEqF = (c3F * c4F) / Math.max(c3F + c4F, 1e-18);
-        const qTransferC = transferGain * cEqF * (v3A - v4A);
-        const v3B = v3A - qTransferC / c3F;
-        let v4B = v4A + qTransferC / c4F;
-
-        // Output leakage over one cycle.
-        v4B *= alpha;
-
-        if (useClamp) {
-          v4B = clamp(v4B, clampMinV, clampMaxV);
-        }
-
-        return {
-          state: { v3: v3B, v4: v4B },
-          qSensorC,
-          qTransferC,
-        };
-      }
-
-      function solvePeriodicSteadyState(derived, initialState) {
-        let state = initialState
-          ? { v3: initialState.v3, v4: initialState.v4 }
-          : { v3: 0, v4: 0 };
-        let residualV = Infinity;
-        let iterations = 0;
-        let qSensorC = 0;
-        let qTransferC = 0;
-
-        for (let i = 0; i < SOLVER.maxIter; i++) {
-          const prevV3 = state.v3;
-          const prevV4 = state.v4;
-          const step = cycleStep(state, derived);
-          state = step.state;
-          qSensorC = step.qSensorC;
-          qTransferC = step.qTransferC;
-          residualV = Math.max(Math.abs(state.v3 - prevV3), Math.abs(state.v4 - prevV4));
-          iterations = i + 1;
-          if (residualV < SOLVER.tolV) {
-            return { converged: true, iterations, residualV, state, qSensorC, qTransferC };
-          }
-        }
-
-        return { converged: false, iterations, residualV, state, qSensorC, qTransferC };
-      }
-
       /** @param {SimulationInputs} p */
       function simulateWithState(p, initialState) {
-        const warnings = [];
-        const areaM2 = (p.widthCm * 1e-2) * (p.heightCm * 1e-2);
-        const totalGapM = p.totalGapMm * 1e-3;
-        const minGapM = p.minGapMm * 1e-3;
-
-        const dLeftM = Math.max(minGapM, p.position * totalGapM);
-        const dRightM = Math.max(minGapM, (1 - p.position) * totalGapM);
-
-        const caF = (EPS0 * p.epsilonR * areaM2) / Math.max(dLeftM, 1e-15);
-        const cbF = (EPS0 * p.epsilonR * areaM2) / Math.max(dRightM, 1e-15);
-        const deltaCF = caF - cbF;
-
-        const qPacketC = 2 * p.vDrivePeakV * deltaCF;
-
-        const rEqOhm = Math.max(p.rEqOhm, 1e-18);
-        const tauOutS = Math.max(rEqOhm * p.c4F, 1e-18);
-
-        const T = 1 / Math.max(p.freqHz, 1e-12);
-        const alpha = Math.exp(-T / tauOutS);
-        const cSensorEqF = Math.max(caF + cbF + p.ccF, 1e-18);
-        const solver = solvePeriodicSteadyState({
-          c3F: Math.max(p.c3F, 1e-18),
-          c4F: Math.max(p.c4F, 1e-18),
-          cSensorEqF,
-          qPacketOpenC: qPacketC,
-          alpha,
-          transferGain: SOLVER.transferGain,
-          useClamp: SOLVER.useOutputClamp,
-          clampMinV: SOLVER.clampMinV,
-          clampMaxV: SOLVER.clampMaxV,
-        }, initialState);
-
-        // Mapping output polarity so position increase (right shift) is positive.
-        const vOutSteadyV = -solver.state.v4;
-        const qToC4C = solver.qTransferC;
-
-        const fPoleHz = 1 / (2 * Math.PI * tauOutS);
-
-        const tHalf = 1 / (2 * Math.max(p.freqHz, 1e-12));
-        const tauA = p.r10Ohm * (caF + p.ccF);
-        const tauB = p.r11Ohm * (cbF + p.ccF);
-        const tauMax = Math.max(tauA, tauB);
-        const fWarningThresholdHz = 1 / (10 * Math.max(tauMax, 1e-18));
-        if (tHalf < 5 * tauMax) {
-          warnings.push("Full-charge assumption may be invalid at this frequency.");
-        }
-
-        if (!solver.converged) {
-          warnings.push("Steady-state solver did not converge; result may be approximate.");
-        }
-
-        if (SOLVER.useOutputClamp) {
-          const nearMin = Math.abs(solver.state.v4 - SOLVER.clampMinV) < 1e-6;
-          const nearMax = Math.abs(solver.state.v4 - SOLVER.clampMaxV) < 1e-6;
-          if (nearMin || nearMax) {
-            warnings.push("Output clamp is active; saturation limits reached.");
-          }
-        }
-
-        if (!Number.isFinite(vOutSteadyV)) {
-          warnings.push("Numeric instability detected; check parameter ranges.");
-        }
-
-        const result = {
-          caF,
-          cbF,
-          deltaCF,
-          qPacketC,
-          qToC4C,
-          vOutSteadyV,
-          tauOutS,
-          fPoleHz,
-          warnings,
-          dLeftM,
-          dRightM,
-          alpha,
-          rEqOhm,
-          tauAS: tauA,
-          tauBS: tauB,
-          fWarningThresholdHz,
-          solverIterations: solver.iterations,
-          solverResidualV: solver.residualV,
-          solverConverged: solver.converged,
-          v3SteadyV: solver.state.v3,
-          qTransferCycleC: solver.qTransferC,
-        };
-        return { result, state: solver.state };
+        return coreSimulateWithState(p, initialState, SOLVER);
       }
 
       /** @param {SimulationInputs} p */
       function simulate(p) {
-        return simulateWithState(p, null).result;
+        return coreSimulate(p, SOLVER);
       }
 
       function run() {
