Replace R_out_load model with AD706 input bias current

--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
             </div>
 
             <div class="field">
-              <label for="rEqOhm">R_out_load <span class="unit">(Ω)</span></label>
-              <input id="rEqOhm" type="number" step="any" min="1" />
+              <label for="iBiasPA">Op-amp input bias <span class="unit">(pA)</span></label>
+              <input id="iBiasPA" type="number" step="any" />
             </div>
 
             <div class="field">
@@ -257,9 +257,8 @@
           </p>
           <p>
             Bidirectional switched-cap model:
-            <code>Q_packet = 2·Vpeak·(Ca-Cb)</code>,
-            then each cycle applies sensor injection on <code>C3</code>, bidirectional charge sharing between
-            <code>C3</code> and <code>C4</code>, and output leakage via <code>R_out_load</code>.
+            each cycle samples the RC-attenuated differential sensor voltage onto <code>C3</code>, then applies charge
+            sharing between <code>C3</code> and <code>C4</code>, plus an output shift from op-amp input bias current.
             Periodic steady-state is solved iteratively from <code>x[n+1]=F(x[n])</code>.
             Polarity is mapped so rightward motion is positive.
           </p>
