Add sensor-node cycle waveform chart and mutual Cc refinements

--- a/index.html
+++ b/index.html
@@ -224,6 +224,14 @@
 
           <article class="chart-card">
             <div class="chart-head">
+              <p class="title">Sensor Node Voltages Over One Clock Cycle</p>
+              <p class="sub">Time-domain Va and Vb from R10/R11/Ca/Cb/Cc with ±V drive</p>
+            </div>
+            <canvas id="chartSensorCycle" width="900" height="260"></canvas>
+          </article>
+
+          <article class="chart-card">
+            <div class="chart-head">
               <p class="title">Solver Iteration Trace</p>
               <p class="sub">Operating-point fixed-point iterations (V3 and Vout)</p>
             </div>
